# electroboy

./: .gitignore  README.md  ai-pipeline  pyproject.toml
docs/: api.md  detailed-design.md  implementation-artifact.md  implementation-plan.md  requirements.md
src/ai_pipeline/: __main__.py  artifacts.py  cli.py  config.py  gates.py  models.py  planning.py  redaction.py  state_store.py
src/ai_pipeline/adapters/: base.py  codex_exec.py  codex_sdk.py  generic_cli.py  manual.py
src/ai_pipeline/prompts/: code.py  requirements.py
src/electroboy/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  gates.py  models.py  redaction.py  runtime.py  state_store.py
src/electroboy/adapters/: base.py  codex_exec.py  codex_sdk.py  generic_cli.py  interactive_cli.py  manual.py
src/electroboy/prompts/: __init__.py  design.py  documentation.py  implementation_plan.py  review.py  validation.py
tests/: test_artifacts.py  test_change_control.py  test_cli.py  test_design_loop.py  test_documentation_review.py  test_gates.py  test_phase_loop.py  test_plan.py  test_project_environment.py  test_reporting.py  test_runtime_adapters.py  test_runtime_config.py  test_state_store.py  test_validation.py
