[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-pipeline"
version = "0.1.0"
description = "Local orchestrator for an AI-agent software pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Amir Shehata", email = "shehataa@ornl.gov" }
]
dependencies = []

[project.scripts]
ai-pipeline = "ai_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
