[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "electroboy"
version = "0.1.0"
description = "AI agent pipeline for disciplined software development."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Amir Shehata", email = "shehataa@ornl.gov" }
]
dependencies = [
  "rich>=13",
]

[project.scripts]
ai-pipeline = "electroboy.cli:main"
electroboy = "electroboy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
